--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,8 @@
             	android:name=".WakeService"
             	android:label="@string/service_name">
         </service>
-        <receiver android:name=".WakeService$CheckUpcomingAlarm"></receiver>
+        <receiver android:name=".WakeService$CheckUpcomingUserAlarm"></receiver>
+        <receiver android:name=".WakeService$WakeAlarm"></receiver>
         <!-- The settings activity for this service. -->
         <activity android:name=".WakeSettings"
 			android:label="@string/settings_name"
